Add start game button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
 </head>
 <body>
+    <button id="startBtn">Start Sketching</button>
     <div class="gameContainer"></div>
     <script src="script.js"></script>
 </body>
