Add reset button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <button id="startBtn">Start Sketching</button>
     <div class="gameContainer"></div>
+    <button id="resetBtn">Reset</button>
     <script src="script.js"></script>
 </body>
 </html>
