Replace start & reset buttons with single button

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     
 </head>
 <body>
-    <button id="startBtn">Start Sketching</button>
+    <button id="btn">Start Sketching</button>
     <div class="gameContainer"></div>
-    <button id="resetBtn">Reset</button>
     <script src="script.js"></script>
 </body>
 </html>
